--- a/pages/guanyu/guanyu.wxml
+++ b/pages/guanyu/guanyu.wxml
@@ -1,4 +1,4 @@
-<image class="shang" src='https://www.chuanshoucs.com/ServerImg/2018-05-28/39dca335-7b01-4acc-aa7c-2b79bd79d229.png'></image>
+<image class="shang" src='{{aboutUsimg}}' mode="aspectFill"></image>
 <view class='clear'></view> 
 <view class='zhong'>
   <image class='icon' src='/image/gongsi.png'></image>
@@ -9,5 +9,5 @@
   <text>简介</text>
 </view>
 <view class='down'>
-    {{jianjie}}
+    {{aboutUsContent}}
 </view>
