--- a/pages/bendi/bendi.wxml
+++ b/pages/bendi/bendi.wxml
@@ -1,10 +1,14 @@
 <!--pages/bendi/bendi.wxml-->
+<!--遮罩-->
+<my-component>
+</my-component>
+<!--遮罩-->
 <view class='foter'>
 <!-- style='height:{{clientY}}px' -->
   <view class='waw' wx:if='{{gao!=0}}' >
     <swiper class='dingwei' bindchange='gaibain' current='{{curren}}' style=' height:{{gao}}rpx' duration='0'>
       <swiper-item  class='active' data-index='{{index}}'>
-        <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.name}}              </text>
+        <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.jobCategoryName}}              </text>
         <button data-in='{{index}}' catchtap='btn'>确认</button>
       </swiper-item>
        <swiper-item class='active' data-index='{{index}}'>
@@ -53,20 +57,33 @@
       筛选
     </view>
   </view>
+  <!--显示列表  -->
+<scroll-view scroll-y="true"  style='height:{{scrollHeight}}px' class="scoll-h"   bindscrolltolower="lower">
   <view class='bottom'>
-    <view class='mingpian' wx:for='{{foterlist}}'>
+    <view class='mingpian' wx:for='{{shopList}}'>
       <view class='left'>
         <image mode='aspectFill' src='/img/index/banner.jpg'></image>
       </view>
       <view class='right'>
-        <view>{{item.name}}</view>
+        <view>{{item.company.companyName}}</view>
         <view>
-          <text wx:for='{{item.title}}' wx:for-item="idx">{{idx.name}}</text>
+          <text wx:for='{{JSON.parse(item.jobLabels)}}' wx:for-item="idx">{{idx}}</text>
         </view>
         <view>返{{item.fanli}}</view>
         <view>{{item.price}}</view>
       </view>
     </view>
   </view>
+        <!--没有数据暂无数据  -->
+<view class="spinner cl" hidden='{{showLoading}}'>
+  <view class="rect1"></view>
+  <view class="rect2"></view>
+  <view class="rect3"></view>
+  <view class="rect4"></view>
+  <view class="rect5"></view>
+</view>
+<view class="bottomText cl" hidden='{{bottomText}}'>已经到底了</view>
+  </scroll-view>
+
 </view>
 <!-- 底部分类 -->
