--- a/pages/businessdetails/businessdetails.wxml
+++ b/pages/businessdetails/businessdetails.wxml
@@ -1,4 +1,8 @@
 <!--pages/businessdetails/businessdetails.wxml-->
+<!--遮罩-->
+<my-component>
+</my-component>
+<!--遮罩-->
 <view class='header'>
   <image mode='aspectFill' src='https://www.chuanshoucs.com/ServerImg/2018-05-28/5f65fb4a-4fd7-48bc-a7c6-f418964fae2a.jpg'></image>
 </view>
