--- a/pages/guanyu/guanyu.wxml
+++ b/pages/guanyu/guanyu.wxml
@@ -1,3 +1,7 @@
+<!--遮罩-->
+<my-component>
+</my-component>
+<!--遮罩-->
 <image class="shang" src='https://www.chuanshoucs.com/ServerImg/2018-05-28/39dca335-7b01-4acc-aa7c-2b79bd79d229.png'></image>
 <view class='clear'></view> 
 <view class='zhong'>
