--- a/pages/huiyuan/huiyuan.wxml
+++ b/pages/huiyuan/huiyuan.wxml
@@ -1,3 +1,7 @@
+<!--遮罩-->
+<my-component>
+</my-component>
+<!--遮罩-->
 <view class='shang' >
   <image src='https://www.chuanshoucs.com/ServerImg/2018-05-28/dc2b1393-fba9-4dff-9484-06d4d512ef3e.png'></image>
 </view>
