--- a/pages/identical/identical.wxml
+++ b/pages/identical/identical.wxml
@@ -1,4 +1,8 @@
 <!--pages/identical/identical.wxml-->
+<!--遮罩-->
+<my-component>
+</my-component>
+<!--遮罩-->
 <view class='header'>
   <image src='/img/postdetails/gongsi.png'></image>
   <text>常熟新市</text>
