--- a/pages/bendi/bendi.wxml
+++ b/pages/bendi/bendi.wxml
@@ -3,17 +3,17 @@
 <my-component>
 </my-component>
 <!--遮罩-->
-<view class='foter'>
+<view class='foter' >
 <!-- style='height:{{clientY}}px' -->
   <view class='waw' wx:if='{{gao!=0}}' >
     <swiper class='dingwei' bindchange='gaibain' current='{{curren}}' style=' height:{{gao}}rpx' duration='0'>
       <swiper-item  class='active' data-index='{{index}}'>
         <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.jobCategoryName}}              </text>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
+        <button data-in='leixing' catchtap='btn'>确认</button>
       </swiper-item>
        <swiper-item class='active' data-index='{{index}}'>
         <text wx:for='{{jine}}' wx:for-item="idx" class='ass {{idx.state==1?"beijing":""}}' catchtap='textdiana' data-ia='{{index}}'>{{idx.name}}         </text>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
+        <button data-in='jine' catchtap='btn'>确认</button>
       </swiper-item>
       <swiper-item class='active' data-index='{{index}}'>
         <text wx:for='{{hezong}}' wx:for-item="idx" class='ass {{idx.state==1?"beijing":""}}' catchtap='textdianb' data-ib='{{index}}'>{{idx.name}} </text>
@@ -60,17 +60,17 @@
   <!--显示列表  -->
 <scroll-view scroll-y="true"  style='height:{{scrollHeight}}px' class="scoll-h"   bindscrolltolower="lower">
   <view class='bottom'>
-    <view class='mingpian' wx:for='{{shopList}}'>
+    <view class='mingpian' wx:for='{{shopList}}' data-id="{{item.companyJobId}}">
       <view class='left'>
         <image mode='aspectFill' src='/img/index/banner.jpg'></image>
       </view>
       <view class='right'>
         <view>{{item.company.companyName}}</view>
         <view>
-          <text wx:for='{{JSON.parse(item.jobLabels)}}' wx:for-item="idx">{{idx}}</text>
+          <text wx:for='{{item.jobLabels}}' wx:for-item="idx">{{idx}}</text>
         </view>
-        <view>返{{item.fanli}}</view>
-        <view>{{item.price}}</view>
+        <view>返{{item.returnMoney}}</view>
+        <view>{{item.jobSalaryMin}}-{{item.jobSalaryMax}}/月</view>
       </view>
     </view>
   </view>
@@ -84,6 +84,5 @@
 </view>
 <view class="bottomText cl" hidden='{{bottomText}}'>已经到底了</view>
   </scroll-view>
-
 </view>
 <!-- 底部分类 -->
