--- a/pages/yijian/yijian.wxml
+++ b/pages/yijian/yijian.wxml
@@ -2,14 +2,16 @@
 <my-component>
 </my-component>
 <!--遮罩-->
+<form bindsubmit='formSubmit'> 
 <view class='top'>
   <image src='/image/yijian.png'></image>
   <text>给我们留言</text>
 </view>
 <view class='main'>
-    <textarea placeholder='请在此撰写您的留言，我们客服将会及时处理哦' maxlength='420'></textarea>
+    <textarea placeholder='请在此撰写您的留言，我们客服将会及时处理哦' maxlength='420' name='content'></textarea>
 </view>
-<button bindtap='tijiao'>提交</button>
+<button  form-type='submit'>提交</button>
+</form>
 <!-- 弹框 -->
 <view class='tan {{tankuang==true?"kuang":" "}}'>
    <image src='/image/gou.png'></image>
