--- a/pages/businessdetails/businessdetails.wxml
+++ b/pages/businessdetails/businessdetails.wxml
@@ -4,7 +4,7 @@
 </my-component>
 <!--遮罩-->
 <view class='header'>
-  <image mode='aspectFill' src='https://www.chuanshoucs.com/ServerImg/2018-05-28/5f65fb4a-4fd7-48bc-a7c6-f418964fae2a.jpg'></image>
+  <image mode='aspectFill' src='{{company.companyImage}}'></image>
 </view>
 <view class='top'>
 <image mode='aspectFill' src='/img/postdetails/xiangqing.png'></image>
@@ -12,6 +12,7 @@
 </view>
 <view class='content'>
   <text>
-  安徽美芝制冷设备有限公司（AMCC）,是广东没得电器股份有限公司和国际知名企业日本东芝组建的中外合资企业。公司于2008年2于注册成立，投资4.9亿元，注册资本3.25亿元
+  {{company.companyIntroduction}}
+  <!-- 安徽美芝制冷设备有限公司（AMCC）,是广东没得电器股份有限公司和国际知名企业日本东芝组建的中外合资企业。公司于2008年2于注册成立，投资4.9亿元，注册资本3.25亿元 -->
   </text>
 </view>
