--- a/pages/classification/classification.wxss
+++ b/pages/classification/classification.wxss
@@ -5,7 +5,11 @@
   border-top: 1rpx solid #f2f2f2;
   border-bottom: 1rpx solid #f2f2f2;
 }
-
+.zhiding{
+  background: url("https://www.chuanshoucs.com/ServerImg/2018-05-28/0c13b495-3c37-4627-a1b2-a063f4e42c8e.png") no-repeat top;
+  background-position-x: 95%;
+  background-size: 8%;
+}
 .header input {
   display: inline-block;
   font-size: 32rpx;
