--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,18 +4,18 @@
 </my-component>
 <!--遮罩-->
 <!-- 头部轮播 -->
- <scroll-view scroll-y="false" style='height:100%' bindscroll='bindscro' scroll-top='{{abba}}'>  
+ <scroll-view scroll-y="false" style='height:100%' bindscroll='bindscro' scroll-top='{{abba}}'  bindscrolltolower="lower">  
 <view class="swiper-container">
   <swiper circular='true' current="{{swiperCurrent}}" bindchange="swiperChange" class="swiper">
-    <block wx:for="{{slider}}" wx:key="unique">
+    <block wx:for="{{HomeSwiper}}" wx:key="unique">
       <swiper-item>
-        <image src="{{item.picUrl}}" class="img"></image>
+        <image src="{{item.swiperImages}}" class="img"></image>
       </swiper-item>
     </block>
   </swiper>
 
   <view class="dots">
-    <block wx:for="{{slider}}" wx:key="unique">
+    <block wx:for="{{HomeSwiper}}" wx:key="unique">
       <view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>
     </block>
   </view>
@@ -74,43 +74,45 @@
 <!-- 换一批 -->
 
 <!-- 底部分类 -->
-<view class='foter'>
-  <view class='waw' wx:if='{{gao!=0}}' style='height:{{clientY}}px'>
+<view class='foter' >
+<!-- style='height:{{clientY}}px' -->
+  <view class='waw' wx:if='{{gao!=0}}' >
     <swiper class='dingwei' bindchange='gaibain' current='{{curren}}' style=' height:{{gao}}rpx' duration='0'>
-      <swiper-item class='active' data-index='{{index}}'>
-        <text wx:for='{{leixing}}' wx:for-item="idx" class='ass {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.name}}         </text>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
+      <swiper-item  class='active' data-index='{{index}}'>
+        <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.jobCategoryName}}              </text>
+        <button data-in='leixing' catchtap='btn'>确认</button>
       </swiper-item>
-      <swiper-item class='active' data-index='{{index}}'>
-        <text wx:for='{{jine}}' wx:for-item="idx" class='ass {{pricex==index?"beijing":""}}' catchtap='textdiana' data-ia='{{index}}'>{{idx.name}}        </text>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
-      </swiper-item>
-      <swiper-item class='active' data-index='{{index}}'>
-        <text wx:for='{{hezong}}' wx:for-item="idx" class='ass {{idx.state==1?"beijing":""}}' catchtap='textdianb' data-ib='{{index}}'>{{idx.name}}         </text>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
-      </swiper-item>
+       <swiper-item class='active' data-index='{{index}}'>
 
+        <text wx:for='{{jine}}' wx:for-item="idx" class='ass {{index==pricex?"beijing":""}}' catchtap='textdiana' data-ia='{{index}}'>{{idx.name}}  </text>
+        <button data-in='jine' catchtap='btn'>确认</button>
+      </swiper-item>
+      <swiper-item class='active' data-index='{{index}}'>
+        <text wx:for='{{hezong}}' wx:for-item="idx" class='ass {{idx.state==1?"beijing":""}}' catchtap='textdianb' data-ib='{{index}}'>{{idx.name}} </text>
+        <button data-in='address' catchtap='btn'>确认</button>
+      </swiper-item>
       <swiper-item class='active' data-index='{{index}}'>
         <view class='xingbie'>性别要求</view>
         <view>
-          <text wx:for='{{xingbie}}' catchtap='textdian' class='ass {{item.state==1?"beijing":""}}' data-id='{{index}}'>{{item.name}}</text>
+          <text wx:for='{{xingbie}}' catchtap='textdian'  class='ass {{selectsx==index?"beijing":""}}' data-id='{{index}}'>{{item.name}}            </text>
           <!-- <text>男可做</text>
           <text>女可做</text> -->
         </view>
         <view class='gongzi'>工资范围</view>
         <view class='gongz'>
-          <input> </input>
-          <image src='/img/center/hengxian.png'></image>
-          <input></input>
+          <input id="min" placeholder="" bindinput="inputTyping" value="{{jobSalaryMin}}"> </input><image src='/img/center/hengxian.png'></image><input placeholder="" id="max" bindinput="inputTyping" value="{{jobSalaryMax}}"></input>
         </view>
-        <button data-in='{{index}}' catchtap='btn'>确认</button>
+        <button data-in='saixuan' catchtap='btn'>确认</button>
       </swiper-item>
     </swiper>
   </view>
-
-
-  <view class='top-head' bindtap='huidaotop' style='position:{{post}} ;top:{{0}}px'>
-    <view bindtap='sanlei' class='{{xuanze==0?"activeshow":""}}'>
+  <!-- 占位置 -->
+  <view class='zhanwei'>
+  
+  </view>
+  <!-- 占位置 -->
+  <view class='top-head'  bindtap='huidaotop' style='position:{{post}} ;top:{{0}}px'>
+    <view bindtap='sanlei' class='{{xuanze==0?"activeshow":""}}' >
       <image src='/img/index/xiala.png'></image>
       类型
     </view>
@@ -127,21 +129,33 @@
       筛选
     </view>
   </view>
-  <view class='bottom' style='margin-top:{{juli}}rpx'>
-    <view class='mingpian' wx:for='{{foterlist}}' catchtap='xiangqing'>
+  <!--显示列表  -->
+
+  <view class='bottom'>
+    <view class="mingpian {{item.jobStick==1?'zhiding':''}}" wx:for='{{shopList}}' data-id="{{item.companyJobId}}" catchtap='xiangqing'>
       <view class='left'>
-        <image mode='aspectFill' src='{{item.url}}'></image>
+        <image mode='aspectFill' src='/img/index/banner.jpg'></image>
       </view>
       <view class='right'>
-        <view>{{item.name}}</view>
+        <view>{{item.company.companyName}}</view>
         <view>
-          <text wx:for='{{item.title}}' wx:for-item="idx">{{idx.name}}</text>
+          <text wx:for='{{item.jobLabels}}' wx:for-item="idx">{{idx}}</text>
         </view>
-        <view>返{{item.fanli}}</view>
-        <view>{{item.price}}</view>
+        <view>返{{item.returnMoney}}</view>
+        <view>{{item.jobSalaryMin}}-{{item.jobSalaryMax}}/月</view>
       </view>
     </view>
   </view>
+<!--没有数据暂无数据  -->
+<view class="spinner cl" hidden='{{showLoading}}'>
+  <view class="rect1"></view>
+  <view class="rect2"></view>
+  <view class="rect3"></view>
+  <view class="rect4"></view>
+  <view class="rect5"></view>
+</view>
+<view class="bottomText cl" hidden='{{bottomText}}'>已经到底了</view>
+
 </view>
 <!-- 底部分类 -->
 
@@ -153,4 +167,4 @@
   <view class='btn1' catchtap='dcancel'>取消</view>
   <view class='btn2' catchtap='dconfirm'>确认</view>
 </view>
- </scroll-view>  
+  </scroll-view>
