--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,6 +4,11 @@
 swiper{
   height: 450rpx;
 }
+.zhiding{
+  background: url("https://www.chuanshoucs.com/ServerImg/2018-05-28/0c13b495-3c37-4627-a1b2-a063f4e42c8e.png") no-repeat top;
+  background-position-x: 95%;
+  background-size: 8%;
+}
 swiper-item image{
   width: 100%;
   height: 100%;
@@ -190,6 +195,7 @@ width: 70%;
   position: fixed;
   top: 0;
   background: rgba(0, 0, 0, 0.5);
+   z-index: 9; 
 }
 
 .dingwei{
