--- a/pages/postdetails/postdetails.wxml
+++ b/pages/postdetails/postdetails.wxml
@@ -8,8 +8,8 @@
    </view> 
 <!-- 头部轮播 -->
 <swiper indicator-dots='true' indicator-active-color='#33A1FF' indicator-color='white' circular='true'>
-  <swiper-item wx:for='{{slider}}'>
-    <image mode='aspectFill' src='{{item.picUrl}}'> </image>
+  <swiper-item wx:for='{{companyJob[0].jobSwiperImages}}'>
+    <image mode='aspectFill' src='{{item}}'> </image>
   </swiper-item>
 </swiper>
 <!-- 头部轮播 -->
@@ -18,47 +18,47 @@
 <view class='leixing'>
   <view class='lei'>
     <image src='/img/postdetails/gongsi.png'></image>
-    <text>上海国美电器分公司</text>
-    <text>返3700</text>
+    <text>{{companyJob[0].company.companyName}}</text>
+    <text>返{{companyJob[0].returnMoney}}</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/gongzi.png'></image>
     <text>工资</text>
-    <text>4000-5600/月</text>
+    <text>{{companyJob[0].jobSalaryMin}}-{{companyJob[0].jobSalaryMax}}月</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/leixing.png'></image>
     <text>招聘类型</text>
-    <text>普工</text>
+    <text>{{companyJob[0].jobCategory.jobCategoryName}}</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/ren.png'></image>
     <text>招聘人数</text>
-    <text>不限</text>
+    <text>{{companyJob[0].jobRecruitsCount}}</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/dizhi.png'></image>
     <text>地区</text>
-    <text>上海市 松江区 九亭</text>
+    <text>{{companyJob[0].company.companyAddress}}</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/xingbie.png'></image>
     <text>性别</text>
-    <text>男女不限</text>
+    <text>{{companyJob[0].jobRecruitsGender==0?'男':companyJob[0].jobRecruitsGender==1?'女':'男女不限'}}</text>
   </view>
   <view class='lei'>
     <image src='/img/postdetails/shijian.png'></image>
     <text>发布时间</text>
-    <text>2018年05月22日</text>
+    <text>{{companyJob[0].createTime}}</text>
   </view>
-  <view class='lei' catchtap='tiaozhuan'>
+  <view class='lei' catchtap='tiaozhuan' data-id="{{companyJob[0].company.companyId}}">
     <image src='/img/postdetails/gongsi.png'></image>
     <text>企业简介</text>
     <image src='/img/index/xiangiqng.png'></image>
   </view>
-  <!-- 标题 -->
+  <!-- 标签 -->
   <view class='title'>
-    <text wx:for='{{title}}'>{{item.name}}</text>
+    <text wx:for='{{companyJob[0].jobLabels}}'>{{item}}</text>
   </view>
   <!-- 职位描述 -->
   <view class='position'>
@@ -67,7 +67,8 @@
       <text>职位描述</text>
     </view>
     <view class='wenzi'>
-      《合肥格力空调》男女不限年龄16-45岁，车费150元，不用体检费，出名单需在职，当天安排宿舍，纹身烟疤临时身份证无磁都可以搞定
+    {{companyJob[0].jobDescription}}
+      <!-- 《合肥格力空调》男女不限年龄16-45岁，车费150元，不用体检费，出名单需在职，当天安排宿舍，纹身烟疤临时身份证无磁都可以搞定 -->
     </view>
   </view>
   <!-- 温馨提示-->
@@ -77,15 +78,16 @@
       <text>温馨提示</text>
     </view>
     <view class='wenzi'>
+        {{companyJob[0].jobNotes}}
       <!-- 《合肥格力空调》男女不限年龄16-45岁，车费150元，不用体检费，出名单需在职，当天安排宿舍，纹身烟疤临时身份证无磁都可以搞定 -->
-      （张杰职介只在门面或电话报名，广场，地铁站 公交车站没有接站点，忘大家不要被骗！)车费150自理免体检费。当天安排宿舍
+      <!-- （张杰职介只在门面或电话报名，广场，地铁站 公交车站没有接站点，忘大家不要被骗！)车费150自理免体检费。当天安排宿舍 -->
     </view>
   </view>
   <!-- 联系电话 -->
   <view class='lei'>
     <image src='/img/postdetails/lianxi.png'></image>
     <text>联系电话</text>
-    <text>021-5765-9081</text>
+    <text>{{companyJob[0].recruitersTelphone}}</text>
   </view>
   <!-- 感兴趣用户 -->
   <view class='lei liulan'>
@@ -101,7 +103,7 @@
         <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
         <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
         <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
-          <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
+        <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
         <image mode='aspectFill' src='/img/postdetails/shuai.jpg'></image>
     </view>
     <image class='last' mode='aspectFill' src='/img/postdetails/shenglue.png'></image>
