--- a/pages/baoming/baoming.wxml
+++ b/pages/baoming/baoming.wxml
@@ -3,15 +3,15 @@
 </my-component> 
 <!--遮罩-->
 <form bindsubmit="formSubmit">
-  <view class='section'>
+  <view class='section xingming'>
     <image src='/image/xingming.png'></image>
     <text>姓名</text>
-    <input type='text' placeholder='填写你的姓名(必填)' name='applicantName'></input>
+    <input type='text' placeholder='填写你的姓名(必填)' name='applicantName' value='{{applicantList.applicantName}}'></input>
   </view>
   <view class='section dianhua'>
     <image src='/image/lianxifangshi.png'></image>
     <text>联系电话</text>
-    <input type='text' placeholder='填写你的联系电话(必填)' name='applicantPhoneNo'></input>
+    <input type='text' placeholder='填写你的联系电话(必填)' name='applicantPhoneNo' value='{{applicantList.applicantPhoneNo}}'></input>
   </view>
   <view class='section'>
     <image src='/image/xingbie.png'></image>
@@ -49,22 +49,22 @@
   <view class='section address'>
     <image src='/image/dizhi.png'></image>
     <text>现住址</text>
-    <textarea placeholder='请填写你的现地址' maxlength='60' name='applicantAddress'></textarea>
+    <textarea placeholder='请填写你的现地址' maxlength='60' name='applicantAddress' value='{{applicantList.applicantAddress}}'></textarea>
   </view>
   <view class='section shenfen'>
     <image src='/image/shenfen.png'></image>
     <text>身份证号</text>
-    <input type='text' placeholder='填写你的身份证号(必填)' name='applicantIDCardNo'></input>
+    <input type='text' placeholder='填写你的身份证号(必填)' name='applicantIDCardNo' value='{{applicantList.applicantIDCardNo}}'></input>
   </view>
   <view class='section dianhua'>
     <image src='/image/zhengzhi.png'></image>
     <text>政治面貌</text>
-    <input type='text' placeholder='填写你的政治面貌' name='applicantEducation'></input>
+    <input type='text' placeholder='填写你的政治面貌' name='applicantEducation' value='{{applicantList.applicantEducation}}'></input>
   </view>
   <view class='section address'>
     <image src='/image/pingjia.png'></image>
     <text>自我评价</text>
-    <textarea placeholder='填写你对自己的评价' maxlength='70' name='applicantEvaluation'></textarea>
+    <textarea placeholder='填写你对自己的评价' maxlength='70' name='applicantEvaluation' value='{{applicantList.applicantEvaluation}}'></textarea>
   </view>
   <view class='kong'></view>
   <view class='kong'>
