--- a/pages/baoming/baoming.wxss
+++ b/pages/baoming/baoming.wxss
@@ -16,11 +16,17 @@
 }
 
 .section input {
-  display: inline-block;
   height: 100%;
-  float: right;
-  margin-right: 100rpx;
   color: #808080;
+}
+.xingming input,
+.dianhua input {
+  position: absolute;
+  top: 0;
+  left: 23%;
+}
+.dianhua input {
+  left: 32%;
 }
 /* 
  电话 
