--- a/pages/postdetails/postdetails.wxml
+++ b/pages/postdetails/postdetails.wxml
@@ -93,7 +93,7 @@
   <view class='lei liulan'>
     <image src='/img/postdetails/lianlian.png'></image>
     <text>感兴趣用户</text>
-    <text>89</text>
+    <text>{{companyJob[0].jobBrowser}}</text>
     <image src='/img/postdetails/liulanliang.png'></image>
   </view>
   <!-- 感兴趣用户头像 -->
