--- a/pages/yijian/yijian.wxml
+++ b/pages/yijian/yijian.wxml
@@ -8,7 +8,7 @@
   <text>给我们留言</text>
 </view>
 <view class='main'>
-    <textarea placeholder='请在此撰写您的留言，我们客服将会及时处理哦' maxlength='420' name='content'></textarea>
+    <textarea wx:if="{{show}}" placeholder='请在此撰写您的留言，我们客服将会及时处理哦' maxlength='420' name='content'></textarea>
 </view>
 <button  form-type='submit'>提交</button>
 </form>
