--- a/pages/bendi/bendi.wxss
+++ b/pages/bendi/bendi.wxss
@@ -167,13 +167,15 @@
   color: #FE7C42;
   font-weight: bold;
 }
-/* .bottom .mingpian:nth-of-type(1),
+/*
+.bottom .mingpian:nth-of-type(1),
 .bottom .mingpian:nth-of-type(2),
 .bottom .mingpian:nth-of-type(3){
   background: url("https://www.chuanshoucs.com/ServerImg/2018-05-28/0c13b495-3c37-4627-a1b2-a063f4e42c8e.png") no-repeat top;
   background-position-x: 95%;
   background-size: 8%;
-} */
+} 
+*/
 
 
 
