--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,7 +9,7 @@
   <swiper circular='true' current="{{swiperCurrent}}" bindchange="swiperChange" class="swiper">
     <block wx:for="{{HomeSwiper}}" wx:key="unique">
       <swiper-item>
-        <image src="{{item.swiperImages}}" class="img"></image>
+        <image src="{{item.swiperImages}}" class="img" data-id="{{item.companyJobId}}" catchtap='shopDetails'></image>
       </swiper-item>
     </block>
   </swiper>
