--- a/pages/identical/identical.wxml
+++ b/pages/identical/identical.wxml
@@ -3,9 +3,11 @@
 <my-component>
 </my-component>
 <!--遮罩-->
+<!-- 引入富文本 -->
+<import src="/wxParse/wxParse.wxml" />
 <view class='header'>
   <image src='/img/postdetails/gongsi.png'></image>
-  <text>常熟新市</text>
+  <text>{{fanfei.company.companyName}}</text>
 </view>
 
 <view class='content'>
@@ -14,9 +16,7 @@
     <view>返费金额</view>
     <view>返费日期</view>
   </view> 
-    <view class='fenlei lei' wx:for='{{fanfei}}'>
-    <view>{{item.name}}</view>
-    <view>{{item.price}}</view>
-    <view>{{item.date}}</view>
+    <view class='fenlei lei'>
+    <template is="wxParse" data="{{wxParseData:article.nodes}}" />
   </view>
 </view>
