--- a/pages/applycenter/applycenter.wxml
+++ b/pages/applycenter/applycenter.wxml
@@ -25,5 +25,13 @@
       <image src='/img/center/dingwei.png'></image><text>{{item.companyJob[0].company.companyAddress}}</text></view>
     <view class='price'><text >{{item.companyJob[0].jobSalaryMin}}-{{item.companyJob[0].jobSalaryMax}}</text>/月</view>
 </view>
-<view class="bottomText" hidden='{{bottomText}}'>已经到底了</view>
+<!--没有数据暂无数据  -->
+<view class="spinner cl" hidden='{{showLoading}}'>
+  <view class="rect1"></view>
+  <view class="rect2"></view>
+  <view class="rect3"></view>
+  <view class="rect4"></view>
+  <view class="rect5"></view>
+</view>
+<view class="bottomText cl" hidden='{{bottomText}}'>已经到底了</view>
 </scroll-view>
