--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -345,13 +345,13 @@ width: 70%;
   color: #FE7C42;
   font-weight: bold;
 }
-.bottom .mingpian:nth-of-type(1),
+/* .bottom .mingpian:nth-of-type(1),
 .bottom .mingpian:nth-of-type(2),
 .bottom .mingpian:nth-of-type(3){
   background: url("https://www.chuanshoucs.com/ServerImg/2018-05-28/0c13b495-3c37-4627-a1b2-a063f4e42c8e.png") no-repeat top;
   background-position-x: 95%;
   background-size: 8%;
-}
+} */
 /* 是否去填写报名信息 */
 .danchuang{
   width: 70%;
