--- a/pages/postdetails/postdetails.wxml
+++ b/pages/postdetails/postdetails.wxml
@@ -1,14 +1,14 @@
 <!--pages/postdetails/postdetails.wxml-->
- <!--遮罩-->
+<!--遮罩-->
 <my-component>
 </my-component>
 <!--遮罩-->
 <!-- 引入富文本 -->
 <import src="/wxParse/wxParse.wxml" />
 
-  <!-- 阴影遮罩层 -->
-    <view class='waw' wx:if='{{gao!=0}}' >
-   </view> 
+<!-- 阴影遮罩层 -->
+<view class='waw' wx:if='{{gao!=0}}'>
+</view>
 <!-- 头部轮播 -->
 <swiper indicator-dots='true' indicator-active-color='#33A1FF' indicator-color='white' circular='true'>
   <swiper-item wx:for='{{companyJob[0].jobSwiperImages}}'>
@@ -70,7 +70,7 @@
       <text>职位描述</text>
     </view>
     <view class='wenzi'>
-    <template is="wxParse" data="{{wxParseData:article.nodes}}" />
+      <template is="wxParse" data="{{wxParseData:article.nodes}}" />
       <!-- 《合肥格力空调》男女不限年龄16-45岁，车费150元，不用体检费，出名单需在职，当天安排宿舍，纹身烟疤临时身份证无磁都可以搞定 -->
     </view>
   </view>
@@ -81,7 +81,7 @@
       <text>温馨提示</text>
     </view>
     <view class='wenzi'>
-        <template is="wxParse" data="{{wxParseData:article1.nodes}}" />
+      <template is="wxParse" data="{{wxParseData:article1.nodes}}" />
       <!-- 《合肥格力空调》男女不限年龄16-45岁，车费150元，不用体检费，出名单需在职，当天安排宿舍，纹身烟疤临时身份证无磁都可以搞定 -->
       <!-- （张杰职介只在门面或电话报名，广场，地铁站 公交车站没有接站点，忘大家不要被骗！)车费150自理免体检费。当天安排宿舍 -->
     </view>
@@ -102,8 +102,8 @@
   <!-- 感兴趣用户头像 -->
   <view class='touxiang'>
     <view class='t_top'>
-        <image mode='aspectFill' wx:for="{{browser}}" src='{{item.user.avatarUrl}}'></image>
-    </view>  
+      <image mode='aspectFill' wx:for="{{browser}}" src='{{item.user.avatarUrl}}'></image>
+    </view>
     <image class='last' mode='aspectFill' src='/img/postdetails/shenglue.png'></image>
   </view>
 
@@ -118,55 +118,83 @@
   <view class='dianhua' catchtap='shoucan' data-id="{{companyJob[0].companyJobId}}" data-collectionId="{{collectionId}}" wx:if="{{isInvalid==1}}">
     <image mode='aspectFill' src='{{shouimg}}'></image>
   </view>
-   <view class='baoming' catchtap='baoming'  wx:if="{{isApplicant==false && isInvalid==1}}" >
+  <view class='baoming' catchtap='baoming' wx:if="{{isApplicant==false && isInvalid==1}}">
     <image mode='aspectFill' src='/img/postdetails/baoming.png'></image>
     <text>报名</text>
-  </view> 
-   <view class='baoming baoming2' wx:if="{{isApplicant==true && isInvalid==1}}">
+  </view>
+  <view class='baoming baoming2' wx:if="{{isApplicant==true && isInvalid==1}}">
     已报名
   </view>
-  <view class='baoming' wx:if="{{isInvalid==1}}">
+  <view class='baoming' wx:if="{{isInvalid==1}}" catchtap='zhuanfa'>
     <image mode='aspectFill' src='/img/postdetails/zhuanfa.png'></image>
-    <button open-type="share">转发</button>
+    <!-- <button open-type="share">转发</button> -->
+    <text>转发</text>
   </view>
   <view class='shixiao' wx:if="{{isInvalid==0}}">已失效</view>
 
-  <!-- 已收藏显示 -->
-  <view class='show' wx:if='{{xianshi==1}}'>
-    <image mode='aspectFill' src='/img/postdetails/yishoucang.png'></image>
-    <text>已收藏</text>
+  <!--转发&生成海报start-->
+   <view wx:if='{{zhuanfa==false}}' class='tankuang'>
+  <view class='flex-one'>
+      <button openType="share" class='hen'>
+        <image mode='aspectFill' src="/img/postdetails/wechat.png"></image>
+        <view>分享给朋友</view>
+      </button>
+       <button bindtap="getGoodsQrcode" class='hen'>
+        <image mode='aspectFill' src="/img/postdetails/erweima.png"></image>
+        <view>生成商品海报</view>
+      </button>
+      <!-- <view bindtap="getGoodsQrcode" class='hen'>
+        <image mode='aspectFill' src="/img/postdetails/erweima.png"></image>
+        <view>生成商品海报</view>
+      </view> -->
+       <button bindtap="shareModalClose" class='close'>关闭</button>
   </view>
-  <!-- 未收藏显示 -->
-  <view class='show' wx:if='{{xianshi==0}}'>
-    <image mode='aspectFill' src='/img/postdetails/quxiaoshoucang.png'></image>
-    <text>取消收藏</text> 
-  </view>
+</view> 
+<!--转发&生成海报end-->
+<view wx:if="{{haibao==false}}" class="canvas" style='width:{{width}}px;height:{{height}}px'>
+  <image mode='aspectFill' src="/img/postdetails/cha.png"></image>
+  <canvas canvas-id="shareCanvas" disable-scroll="true" bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+</view>
 
-  <!-- 去报名 -->
-  <view class='hide' wx:if='{{xinxi==1}}'>
-    <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
-    <view class='text'>是否将报名信息提交</view>
-    <view class='dibu1' catchtap='Bquxiao'>
-      <text>取消</text>
-    </view>
-    <view class='dibu2' catchtap='Bqueren' data-id='{{companyJob[0].companyJobId}}'>
-      <text>确认</text>
-    </view>
+
+
+<!-- 已收藏显示 -->
+<view class='show' wx:if='{{xianshi==1}}'>
+  <image mode='aspectFill' src='/img/postdetails/yishoucang.png'></image>
+  <text>已收藏</text>
+</view>
+<!-- 未收藏显示 -->
+<view class='show' wx:if='{{xianshi==0}}'>
+  <image mode='aspectFill' src='/img/postdetails/quxiaoshoucang.png'></image>
+  <text>取消收藏</text>
+</view>
+
+<!-- 去报名 -->
+<view class='hide' wx:if='{{xinxi==1}}'>
+  <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
+  <view class='text'>是否将报名信息提交</view>
+  <view class='dibu1' catchtap='Bquxiao'>
+    <text>取消</text>
   </view>
-  <!-- 去完善信息 -->
-  <view class='hide' wx:if='{{xinxi==0}}'>
-    <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
-    <view class='text'>请完善报名信息</view>
-    <view class='dibu1' catchtap='Wquxiao'>
-      <text>取消</text>
-    </view>
-    <view class='dibu2' catchtap='Wqueren'>
-      <text>确认</text>
-    </view>
-  </view>
-  <!-- 已提交信息 -->
-  <view class='hidden' wx:if='{{hidden==false}}'>
-    <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
-    <view class='text'>已提交</view>
+  <view class='dibu2' catchtap='Bqueren' data-id='{{companyJob[0].companyJobId}}'>
+    <text>确认</text>
   </view>
 </view>
+<!-- 去完善信息 -->
+<view class='hide' wx:if='{{xinxi==0}}'>
+  <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
+  <view class='text'>请完善报名信息</view>
+  <view class='dibu1' catchtap='Wquxiao'>
+    <text>取消</text>
+  </view>
+  <view class='dibu2' catchtap='Wqueren'>
+    <text>确认</text>
+  </view>
+</view>
+<!-- 已提交信息 -->
+<view class='hidden' wx:if='{{hidden==false}}'>
+  <image mode='aspectFit' src='/img/postdetails/youjian.png'></image>
+  <view class='text'>已提交</view>
+</view>
+</view>
+<view class='shade' style='display:{{shade}}' disable-scroll="true" bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></view>
