--- a/pages/postdetails/postdetails.wxss
+++ b/pages/postdetails/postdetails.wxss
@@ -134,7 +134,7 @@ swiper-item image {
   position: relative;
 }
 .foter view{
-   float: left; 
+  float:left;   
   display: inline-block;
   margin-right: 27rpx;
 }
@@ -306,3 +306,90 @@ swiper-item image {
   line-height: 100rpx;
   text-align: center;
 }
+/* 开始 */
+ .tankuang{
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 30%;
+  position: fixed;
+  bottom: 40rpx;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  float: none;
+}
+.tankuang view {
+  display: block;
+  margin: 0 !important;
+  float: none;
+  text-align: center;
+  
+}
+.tankuang image {
+  width: 100rpx;
+  height: 100rpx;
+}
+.flex-one {
+  background: #fff;
+  height: 400rpx;
+  position: relative;
+  padding-top: 1rem;
+}
+.hen {
+    font-size: 9pt;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20rpx;
+    border: none;
+    background: none;
+    float: left;
+    width: 50%;
+} 
+.close{
+position: absolute;
+bottom: 2rem;
+line-height: 2.5rem;
+height: 2.5rem;
+width: 95%;
+text-align: center;
+background: #33A1FF;
+margin: 0 2.5%;
+overflow: hidden;
+color: #fff;
+}
+.shade{
+   position: fixed;
+   width: 1000000px;
+   height:1000000px;
+   left: 0;
+   top: 0;
+   background: #000;
+   opacity: 0.3;
+   z-index: 998;
+}
+
+.canvas {
+  background-color: #fff;
+  position: fixed;
+  left: 5%;
+  top: 40rpx;
+  border-radius: 10rpx;
+  z-index: 999;
+  overflow: hidden;
+  }
+.canvas image{
+  width: 50rpx;
+  height: 50rpx;
+  float: right;
+  margin: 20rpx;
+}
+  canvas{
+  width: 90%;
+  height:70%;
+  margin: 100rpx auto 0;
+  box-shadow:#ccc 0rpx 0rpx 13px; 
+  border-radius:10rpx;
+}  
