--- a/pages/identical/identical.wxss
+++ b/pages/identical/identical.wxss
@@ -25,12 +25,12 @@
   padding: 30rpx;
   border-bottom: 1rpx solid #f2f2f2;
 }
-.content .fenlei view{
+/* .content .fenlei view{
   text-align: center;
   font-size: 32rpx;
   width: 33.3%;
   display: inline-block;
-}
+} */
 
 .lei view:nth-of-type(1),
 .lei view:nth-of-type(3){
