--- a/wxParse/wxParse.wxss
+++ b/wxParse/wxParse.wxss
@@ -24,6 +24,7 @@ view{
     display: inline;
     margin: 0;
     padding: 0;
+    font-size: 30rpx;
 }
 /*//标题 */
 .wxParse-div{margin: 0;padding: 0;}
