--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,7 +10,7 @@
   <swiper circular='true' current="{{swiperCurrent}}" bindchange="swiperChange" class="swiper">
     <block wx:for="{{HomeSwiper}}" wx:key="unique">
       <swiper-item>
-        <image src="{{item.swiperImages}}" class="img" data-id="{{item.companyJobId}}" catchtap='shopDetails'></image>
+        <image src="{{item.swiperImages}}" class="img" data-id="{{item.companyJobId}}" catchtap='shopDetails' mode='aspectFill'></image>
       </swiper-item>
     </block>
   </swiper>
